--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TourPackager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/travel-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/travel-32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/travel-96.png">
+  <meta name="description" content="Your page description">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
