Add Angular localization support, update environment settings, and enhance header service functionality

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
   <title>TourPackager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/travel-16.png">
+  <!-- <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/travel-16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/travel-32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/travel-96.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/travel-96.png"> -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <meta name="description" content="Your page description">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700;9..40,800;9..40,900&family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
